Add semantic change to navigation and routing
-changed file name to edit products
-changed controllers to render page edit page
-changed get route to page view

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -13,9 +13,9 @@
       </li>
       <li class="nav-list_items">
         <a
-          class="<%= (path ==='/admin/remove-product') && 'active' %>"
-          href="/admin/remove-product"
-          >Remove Product</a
+          class="<%= (path ==='/admin/edit-product') && 'active' %>"
+          href="/admin/edit-product"
+          >Edit Product</a
         >
       </li>
       <li class="nav-list_items">
