Modify admin routes and navigation for admin views
-changed admin route to render all admin products
-provided change to admin products view to render products
-changed navigation to render admin view with active class

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -13,9 +13,9 @@
       </li>
       <li class="nav-list_items">
         <a
-          class="<%= (path ==='/admin/edit-product') && 'active' %>"
-          href="/admin/edit-product"
-          >Edit Product</a
+          class="<%= (path ==='/admin/products') && 'active' %>"
+          href="/admin/products"
+          >Admin Products</a
         >
       </li>
       <li class="nav-list_items">
