Add dynamic route, add animation, and change style
changed pageTitle and content in getProducts admin controller to render
proper page title and cotent for page

added an id property in the save method of Product model to generate
a test id to pass as a parameter to a dynamic route

added styles to css files to make the layout a bit more readable and
added media queries to make the products a little more responsive

modified the product route in shop routes to provide a dynamic route
using req.params object to render a single product with the passed in
prodID

added a script tag to end.ejs for aos animations

added meta tag in head.ejs with a description and content for
SEO and added link for aos (animate on scroll) to provide some animation

added elements in shop product-detail.ejs to render a single product
with price and description which the dynamic route will render through
the product list page

--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -21,6 +21,7 @@
     border: 1px solid black;
     padding: 1em;
     margin-bottom: .75em;
+    gap: 1rem
 }
 
 .grid h2 {
@@ -56,4 +57,10 @@
 }
 .delete{
     grid-area: dbutton;
+}
+
+@media (max-width:590px){
+    .grid{
+        margin: 10px auto;
+    }
 }
