--- a/views/admin/products-list.ejs
+++ b/views/admin/products-list.ejs
@@ -10,7 +10,7 @@
     <% } %>
      
     <% products.forEach(product => { %>
-        <div class="grid">
+        <div data-aos='fade-in' class="grid">
             <h2><%= product.title %> </h2>
             <p class="description"><%= product.description %> </p>
             <p class="price"><%= product.price  %> </p>
