--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -1,4 +1,10 @@
 
-    
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init({
+            offset: 120,
+            duration: 500
+        });
+      </script>
 </body>
 </html>
