--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name='description' content="shop made from ejs and express">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= pageTitle %> </title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
