--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -3,4 +3,7 @@
 <body>
     <%- include('../includes/navigation') %>
     <h1 class="main-title"><%= content %> </h1> 
+    <h2><%= product.title %> </h2>
+    <p><%= product.description %> </p>
+    <p>$<%= product.price %> </p>
 <%- include('../includes/end.ejs') %> 
