--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -10,11 +10,12 @@
     <% } %>
      
     <% products.forEach(product => { %>
-        <div class="grid">
+        <div data-aos='fade-in' class="grid">
             <h2><%= product.title %> </h2>
             <p class="description"><%= product.description %> </p>
             <p class="price"><%= product.price  %> </p>
-            <button>Add To Cart</button>
+            <a class="details" href="/products/<%= product.id %>">Details</a>
+            <a class="add" href="/cart">Add To Cart</a>
         </div>
     <% }) %>  
 </div>  
