Add post route for cart and refactor styles
providing a post route to cart will eventually add
functionality for adding items to cart page. Added new
controller to the post route for route/shop.js and
registered controller on post route to cart

refactored css and added a generic btn class selector in
css/main.css. Also removed unneeded selectors from
files where btn takes its properties. Provides additional
styling for grid decoration

added new ejs file for add-to-cart form button to submit
post request to new route

--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -18,8 +18,10 @@
     'ebutton blank dbutton';
     grid-template-rows: repeat(3, 75px);
     grid-template-columns: repeat(3, 1fr);
-    border: 1px solid black;
-    padding: 1em;
+    border: 1px solid rgba(0,0,0,0.8);
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.6);
+    padding: 1.5em;
     margin-bottom: .75em;
     gap: 1rem
 }
@@ -36,20 +38,6 @@
 .price {
     grid-area: price;
     justify-self: center;
-}
-
-.grid .edit,
-.grid .delete {
-    text-decoration: none;
-    text-align: center;
-    border: 1px solid white;
-    border-radius: 3px;
-    background-color: #593e72;
-    color: white;
-    font-weight: bold;
-    align-self: center;
-    padding: .25em .75em;
-
 }
 
 .edit{
