--- a/views/admin/products-list.ejs
+++ b/views/admin/products-list.ejs
@@ -14,8 +14,8 @@
             <h2><%= product.title %> </h2>
             <p class="description"><%= product.description %> </p>
             <p class="price"><%= product.price  %> </p>
-            <a href="/admin/remove-product" class="delete">Delete</a>
-            <a href="/admin/edit-product" class="edit">Edit</a>
+            <a href="/admin/remove-product" class="btn delete">Delete</a>
+            <a href="/admin/edit-product" class="btn edit">Edit</a>
         </div>
     <% }) %>  
 </div>  
