--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,3 +58,26 @@ h1, h2, h3 {
     padding: 1em;
     
 }
+
+.btn {
+    text-decoration: none;
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 3px;
+    background-color: #593e72;
+    color: white;
+    font-weight: bold;
+    align-self: center;
+    padding: .25em .75em;
+
+}
+
+.form {
+    grid-area: cart;
+}
+
+.form .add {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
