--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -22,8 +22,10 @@
     'details cart cart';
     grid-template-rows: repeat(3, 75px);
     grid-template-columns: repeat(3, 1fr);
-    border: 1px solid black;
-    padding: 1em;
+    border: 1px solid rgba(0,0,0,0.8);
+    border-radius: 5px;
+    box-shadow:3px 5px 5px rgba(0,0,0,0.6);
+    padding: 1.5em;
     margin-bottom: .75em;
     gap: .5rem;
 }
@@ -40,20 +42,6 @@
 .price {
     grid-area: 4 / price;
     justify-self: center;
-}
-
-.grid .add,
-.grid .details {
-    text-decoration: none;
-    text-align: center;
-    border: 1px solid white;
-    border-radius: 3px;
-    background-color: #593e72;
-    color: white;
-    font-weight: bold;
-    align-self: center;
-    padding: .25em .75em;
-
 }
 
 .details {
