--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %> 
+<link rel="stylesheet" href="/css/shop.css">
 </head>
 <body>
     <%- include('../includes/navigation') %>
@@ -6,4 +7,5 @@
     <h2><%= product.title %> </h2>
     <p><%= product.description %> </p>
     <p>$<%= product.price %> </p>
+    <%- include('../includes/add-to-cart')  %>
 <%- include('../includes/end.ejs') %> 
