--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,7 +58,7 @@ h1, h2, h3 {
     padding: 1em;
     
 }
-
+/* Gerneric Button Styles */
 .btn {
     text-decoration: none;
     text-align: center;
@@ -69,7 +69,13 @@ h1, h2, h3 {
     font-weight: bold;
     align-self: center;
     padding: .25em .75em;
+    transition: opacity 0.5s ease-in-out;
+}
 
+
+.btn:hover,
+.btn:focus {
+    opacity: 0.9;
 }
 
 .form {
